--- a/_posts/2020-12-22-anthem-game-in-2020.markdown
+++ b/_posts/2020-12-22-anthem-game-in-2020.markdown
@@ -78,4 +78,4 @@ I am enjoying the game so far, and I feel like anything above $15 would be over 
 
 I would give this game a solid 6/10 if I had to. Pick it up on sale, or play it at a friends place if you really want to get a feel before you sink money into it.
 
-<a href="/assets/images/anthem_2.jpg"><img src="/assets/images/anthem_2.jpg" alt=""></a>>
+<a href="/assets/images/anthem_2.jpg"><img src="/assets/images/anthem_2.jpg" alt=""></a>
